--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>JS function exercises</h1>
     <script src="./webAPICall.js"></script>
     <script src="./exercise1.js"></script>
+    <script src="./exercise2.js"></script>
   </body>
 </html>
